# wip

./: .gitignore  pyproject.toml
scrapper/: __main__.py  crawler.py  model.py  utils.py
